Can only sculpt vertices in Second shapekey clickling from their position in Basis shapekey #62423

Closed
opened 2019-03-10 18:27:52 +01:00 by msalv · 3 comments

System Information
Operating system: Windows 10 64b
Graphics card: Nvidia 1060

Blender Version
Broken: 4041249943

Short description of error

If a mesh has a Basis shapekey and second or more Shapekeys, as well as a Generate Modifier like Subdivision enabled, any time you try to sculpt on the second Shapekey you can only move vertices by clicking on the original Basis position, even if on screen or in Object mode the vertices appear in the new sculpted position.

This happens in all shading modes, only being able to click on the original Basis position to sculpt your shapekey, but is visually different in Workbench vs Lookdev/Eevee:

In Workbench, the newly sculpted shape visually resets to the Basis position as soon as you stop the stroke of the brush, You can only see the shape outside of Sculpt mode. (the modifier is also disabled in Sculptmode with Workbench but that's another bug that has been reported already, it might be related though). In Lookdev however, you can see the actual sculpted shape of the second Shapekey, but still, you can only click on the original position to move the vertices you want, which doesn't match visually.

Exact steps for others to reproduce the error

Based on the attached file:
Go into Sculptmode and try grabbing Suzanne's ear by the red part. If you do it from Lookdev you can see how you can only grab the ear by clicking inside the Annotation I drew. If you do it from Workbench you can see how it resets after each brush stroke on top of that.
bug15.blend

Based on Starttup file:
Add a Monkey mesh object. Add two shapekeys to it. Pin and highlight the Key 1 shapekey. Add a Subdivision or a Mirror modifier. Go into sculpt mode and drag the ear. At first it seems fine since the position of the vertices is the same in both shapekeys when you create them, but the further apart you move the vertices from their original position, the more jarring it is to sculpt them.

**System Information** Operating system: Windows 10 64b Graphics card: Nvidia 1060 **Blender Version** Broken: 40412499433 **Short description of error** If a mesh has a Basis shapekey and second or more Shapekeys, as well as a Generate Modifier like Subdivision enabled, any time you try to sculpt on the second Shapekey you can only move vertices by clicking on the original Basis position, even if on screen or in Object mode the vertices appear in the new sculpted position. This happens in all shading modes, only being able to click on the original Basis position to sculpt your shapekey, but is visually different in Workbench vs Lookdev/Eevee: In Workbench, the newly sculpted shape visually resets to the Basis position as soon as you stop the stroke of the brush, You can only see the shape outside of Sculpt mode. (the modifier is also disabled in Sculptmode with Workbench but that's another bug that has been reported already, it might be related though). In Lookdev however, you can see the actual sculpted shape of the second Shapekey, but still, you can only click on the original position to move the vertices you want, which doesn't match visually. **Exact steps for others to reproduce the error** Based on the attached file: Go into Sculptmode and try grabbing Suzanne's ear by the red part. If you do it from Lookdev you can see how you can only grab the ear by clicking inside the Annotation I drew. If you do it from Workbench you can see how it resets after each brush stroke on top of that. [bug15.blend](https://archive.blender.org/developer/F6795922/bug15.blend) Based on Starttup file: Add a Monkey mesh object. Add two shapekeys to it. Pin and highlight the Key 1 shapekey. Add a Subdivision or a Mirror modifier. Go into sculpt mode and drag the ear. At first it seems fine since the position of the vertices is the same in both shapekeys when you create them, but the further apart you move the vertices from their original position, the more jarring it is to sculpt them.
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-11 14:01:44 +01:00

This issue was referenced by 89840b5917

This issue was referenced by 89840b5917ee61f6430664a83f5cfc082a88704a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62423
No description provided.